Insta section added

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
       </div>
     </div>
   </div>
+
+
+  <div class="section ">INSTAGRAM START FROM HERE</div>
  
 
    
@@ -235,11 +238,12 @@
   </div>
   
   <div class="section section-footer-dark is-dark">
+    <a href="index.html" class="brand order-first w-nav-brand w--current">
+      <img class="centerimg margin-bottom-2" src="images\FULL.png">
+    </a>
     <div class="container margin-bottom">
-      <div class="col lg-3 md-12">
-        <a href="index.html" class="brand order-first w-nav-brand w--current">
-          <img src="images\FULL.png" width="140">
-        </a>
+      
+      <div class="col lg-3 md-12">       
       </div>
       <div class="col lg-6 md-12">
         <div class="flexh-space-between md-flex-vertical">
