--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <div class="container margin-bottom">
       <div class="col lg-3 md-12">
         <a href="index.html" class="brand order-first w-nav-brand w--current">
-          <img src="images\FULL.png" width="140">
+          <img src="images\FULL.png">
         </a>
       </div>
       <div class="col lg-6 md-12">
