--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="video-container">
       <video src="images/C4816.mp4" autoplay muted loop></video>
     </div>
+  
     
   </section>
   <div class="position-absolute custom-bg-decor"></div>
@@ -44,7 +45,7 @@
       <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
         <div class="navbar-container flexh-space-between w-container">
           <a href="index.html" class="brand order-first w-nav-brand w--current">
-            <img src="images\FULL.png" width="140">
+            <img src="images\FULL.png" width="135">
           </a>
           
           <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
@@ -56,7 +57,10 @@
             </a>
           </nav>
           <div class="menu-button order-last hamburger-on-dark w-nav-button">
-            <div class="iconfont is-16px on-dark"><em class="iconfont__no-italize"></em></div>
+            <div class="iconfont is-16px "><em class="iconfont__no-italize"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+              width="40" height="40"
+              viewBox="0 0 172 172"
+              style=" fill:#ffffff;"><g transform=""><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z"></path></g><path d="" fill="none"></path></g></g></svg></em></div>
           </div>
         </div>
       </div>
@@ -64,7 +68,8 @@
   </div>
 
 
-  <div class="section ">INSTAGRAM START FROM HERE</div>
+  
+  
  
 
    
