--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       .tab1 {
           	tab-size: 4;
           }
-          
+
 
 </style>
 
@@ -84,7 +84,7 @@
       <div class="col lg-4 flexv-space-between md-12">
         <div>
           <div class="pre-title on-dark">Service 1</div>
-          <div class="size-h2 size-h2-xs margin-bottom">STANDARD DETAIL</div>
+          <div class="size-h2 size-h2-xs margin-bottom">Advanced Interior Detail</Details></div>
             <img src="images/steeringwheel.png" width="75">
            <span class="margin-left-sm fontsmall"> 
             Standard Vapour Cleaning
@@ -122,7 +122,7 @@
       <div class="col lg-4 flexv-space-between md-12">
         <div>
           <div class="pre-title on-dark">Service 2</div>
-          <div class="size-h2 size-h2-xs margin-bottom">IMMACULATE DETAIL</div>
+          <div class="size-h2 size-h2-xs margin-bottom">Showroom Interior Detail</div>
             <img src="images/steeringwheel.png" width="75">
            <span class="margin-left-sm fontsmall"> 
             Full In-Depth Vapour Cleaning
@@ -248,7 +248,7 @@
   
   <div class="section section-footer-dark is-dark">
     <a href="index.html" class="brand order-first w-nav-brand w--current">
-      <img class="centerimg margin-bottom-2" src="images\FULL.png">
+      <img class="centerimg margin-bottom-2" src="images\VAlogo.png">
     </a>
     <div class="container margin-bottom">
       <div class="col lg-3 md-12">       
