--- a/contact.html
+++ b/contact.html
@@ -94,27 +94,38 @@
       </div>
     </div>
   </div>
+
+  <!--Last Nav Bar-->
   <div class="section section-footer-dark is-dark">
-    <div class="container margin-bottom">
+    <a href="index.html" class="c">
+      <img class="centerimg margin-bottom-2" src="images\VAlogo.png">
+    </a>
+    <div class="container margin-bottom centermargin">
       <div class="col lg-3 md-12">
-        <h3 class="logotype is-medium no-margin-trbl">S O R U M</h3>
       </div>
-      <div class="col lg-6 md-12">
-        <div class="flexh-space-between md-flex-vertical"><a href="#" class="footer-nav-link is-bold on-dark">About</a><a href="#" class="footer-nav-link is-bold on-dark">Services</a><a href="#" class="footer-nav-link is-bold on-dark">Blog</a><a href="#" class="footer-nav-link is-bold on-dark">Car Listing</a><a href="#" class="footer-nav-link is-bold on-dark">Spare Part</a><a href="#" class="footer-nav-link is-bold on-dark">Contact</a></div>
+      <div class="col lg-6 md-12 centermargin">
+        <div class="centermargin flexh-space-between md-flex-vertical">
+          <a href="#" class="footer-nav-link is-bold on-dark">About Us</a>
+          <a href="#" class="footer-nav-link is-bold on-dark">FAQ's</a>
+          <a href="#" class="footer-nav-link is-bold on-dark">Services</a>
+          <a href="#" class="footer-nav-link is-bold on-dark">Contact Us</a>
+        </div>
       </div>
       <div class="col lg-3 md-12">
         <div class="flexh-justify-end md-flexh-justify-start">
-          <div class="fa-brand margin-right-small"></div>
-          <div class="fa-brand margin-right-small"></div>
-          <div class="fa-brand margin-right-small"></div>
-          <div class="fa-brand margin-right-small"></div>
+
+
         </div>
       </div>
     </div>
+
     <div class="container flexh-justify-center md-flexh-justify-left">
       <div class="col lg-6 margin-bottom">
         <div class="low-text-contrast text-small flexh-space-between md-flex-vertical">
-          <div class="md-order-last">©2019 Sorum frmwrk. All rights reserved. </div><a href="#" class="footer-bottom-link on-dark">Privacy Policy</a><a href="#" class="footer-bottom-link on-dark">Term Of Service</a></div>
+          <div class="md-order-last">© Vapour Auto. All rights reserved.</div>
+          <a href="#" class="footer-bottom-link on-dark">Privacy Policy</a>
+          <a href="#" class="footer-bottom-link on-dark">Term Of Service</a>
+        </div>
       </div>
     </div>
   </div>
@@ -122,4 +133,5 @@
   <script src="js/webflow.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
+
 </html>
