--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 </head>
 
 <style>
+.myDiv {
+  background-color: black;
+  text-align: center;
+  color: #ffffff;
+}
+
   @font-face {
     font-family: Poppins;
     src: url('fonts/Poppins-Regular.ttf');
@@ -45,7 +51,7 @@
 <body>
   <section class="showcase">
     <div class="video-container">
-      <video src="images/C4816.mp4" autoplay muted loop></video>
+      <video src="images/Vapour Auto.mp4" autoplay muted loop></video>
     </div>
 
   </section>
@@ -53,7 +59,7 @@
   <div class="section-header position-absolute">
     <div class="container space-between">
       <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-        <div class="navbar-container flexh-space-between w-container">
+        <div class=" navbar-container flexh-space-between w-container">
           <a href="index.html" class="brand order-first w-nav-brand w--current">
             <img src="images\FULL.png" width="135">
           </a>
@@ -61,7 +67,7 @@
           <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
             <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
             <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
-            <a href="service.html" class="nav-link on-dark w-nav-link">Contact</a>
+            <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
             <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
               class="nav-dropdown w-dropdown">
             </div>
@@ -92,12 +98,10 @@
   </div>
 
 
-
-  <script src="https://apps.elfsight.com/p/platform.js" defer>
-  </script>
-  <div class="elfsight-app-95da3954-8fef-4a26-b6ee-a374329902b4">
+  <div class="myDiv">
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-47792318-9065-4abc-9e54-172380ff9754"></div>
   </div>
-
 
 
 
@@ -370,10 +374,10 @@
       </div>
       <div class="col lg-6 md-12 centermargin">
         <div class="centermargin flexh-space-between md-flex-vertical">
-          <a href="#" class="footer-nav-link is-bold on-dark">About Us</a>
+          <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
           <a href="#" class="footer-nav-link is-bold on-dark">FAQ's</a>
-          <a href="#" class="footer-nav-link is-bold on-dark">Services</a>
-          <a href="#" class="footer-nav-link is-bold on-dark">Contact Us</a>
+          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
+          <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
         </div>
       </div>
       <div class="col lg-3 md-12">
