--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/asas-framework.webflow.css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:100,200,300,regular,500,600,700,800,900"]  }});</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
@@ -19,45 +19,76 @@
 
 </head>
 <style>
-  @font-face { font-family: Poppins; src: url('fonts/Poppins-Regular.ttf'); } 
-
-      div {font-family: Poppins}
-      a {font-family: Poppins}
-
-      .tab1 {
-          	tab-size: 4;
-          }
-
-</style>
-
-<body>
-  <div class="position-absolute custom-bg-decor"></div>
-  <div class="section-header position-absolute">
-    <div class="container space-between">
-      <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-        <div class="navbar-container flexh-space-between w-container">
-          <a href="index.html" class="brand order-first w-nav-brand w--current">
-            <img src="images\FULL.png" width="135">
-          </a>
-          
-          <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
-            <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
-            <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
-            <a href="service.html" class="nav-link on-dark w-nav-link">Contact</a>
-            <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741" class="nav-dropdown w-dropdown">
-             </div>
+  .myDiv {
+    background-color: black;
+    text-align: center;
+    color: #ffffff;
+  }
+  
+    @font-face {
+      font-family: Poppins;
+      src: url('fonts/Poppins-Regular.ttf');
+    }
+  
+    div {
+      font-family: Poppins
+    }
+  
+    a {
+      font-family: Poppins
+    }
+  
+    .tab1 {
+      tab-size: 4;
+    }
+  </style>
+  
+  <!-- Body Starts -->
+  
+  <body>
+   
+    <div class="position-absolute custom-bg-decor"></div>
+    <div class="section-header position-absolute">
+      <div class="container space-between">
+        <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
+          <div class="navbar-container flexh-space-between w-container">
+            <a href="index.html" class="brand order-first w-nav-brand w--current">
+              <img src="images\FULL.png" width="135">
             </a>
-          </nav>
-          <div class="menu-button order-last hamburger-on-dark w-nav-button">
-            <div class="iconfont is-16px "><em class="iconfont__no-italize"><svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
-              width="40" height="40"
-              viewBox="0 0 172 172"
-              style=" fill:#ffffff;"><g transform=""><g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><path d="M0,172v-172h172v172z" fill="none"></path><g fill="#ffffff"><path d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z"></path></g><path d="" fill="none"></path></g></g></svg></em></div>
+  
+            <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
+              <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
+              <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
+              <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
+              <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
+                class="nav-dropdown w-dropdown">
+              </div>
+              </a>
+            </nav>
+            <div class="menu-button order-last hamburger-on-dark w-nav-button">
+              <div class="iconfont is-16px "><em class="iconfont__no-italize"><svg xmlns="http://www.w3.org/2000/svg"
+                    x="0px" y="0px" width="40" height="40" viewBox="0 0 172 172" style=" fill:#ffffff;">
+                    <g transform="">
+                      <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                        stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                        font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                        style="mix-blend-mode: normal">
+                        <path d="M0,172v-172h172v172z" fill="none"></path>
+                        <g fill="#ffffff">
+                          <path
+                            d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z">
+                          </path>
+                        </g>
+                        <path d="" fill="none"></path>
+                      </g>
+                    </g>
+                  </svg></em></div>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  
 
   <div class="section is-header is-half-dark section-with-bg bg1">
     <div class="container flex-horizontal">
@@ -71,6 +102,7 @@
       <div class="col lg-1"></div>
     </div>
   </div>
+  
   <div class="section is-dark">
     <div class="container flex-horizontal">
       <div class="col-2 lg-5 alignself-center md-12">
@@ -316,9 +348,10 @@
       </div>
       <div class="col lg-6 md-12">
         <div class="flexh-space-between md-flex-vertical">
-          <a href="#" class="footer-nav-link is-bold on-dark">About Us</a>
-          <a href="#" class="footer-nav-link is-bold on-dark">Services</a>
-          <a href="#" class="footer-nav-link is-bold on-dark">Contact Us</a>
+          <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
+          <a href="#" class="footer-nav-link is-bold on-dark">FAQ's</a>
+          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
+          <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
         </div>
       </div>
       <div class="col lg-3 md-12">
