--- a/contact.html
+++ b/contact.html
@@ -114,12 +114,12 @@
             us</div>
           <div class="container container-nested">
             <div class="col lg-6">
-              <div><span class="text-medium weight-is-medium">In the bay area?</span><br>‍<br>3838  O Conner
-                Street<br>Mississippi, MS <br>39507<br>‍<br>hola@sorumfrmwork<br><a href="tel:+12288801945">+1
-                  (228)-880-1946</a><br></div>
+              <div><span class="text-medium weight-is-medium">Near by?</span><br>‍<br>52 Antares 
+                Street<br>Dr #4, Nepean, Ottawa<br>ON K2E 7Z1, Canada<br>‍<br>info@vapourauto.com<br><a href="tel:613-608-9612">
+                  613-608-9612</a><br></div>
             </div>
             <div class="col lg-6">
-              <div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday—Saturday<br>11am—7pm<br>
+              <div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday—Saturday<br>10am—7pm<br>
               </div>
             </div>
           </div>
@@ -127,9 +127,8 @@
             <div class="margin-bottom">Or send us message:</div>
 
             <!--Form Starts-->
-            <iframe
-              src="https://docs.google.com/forms/d/e/1FAIpQLScebkjM6wWu6omZJYxxe1GGzlUUm4ubU1qtLysxWhBSZDNfqQ/viewform?embedded=true"
-              width="750" height="650" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+            <div class="elfsight-app-bfe90ba5-e349-4172-a3f9-0030addfe7a2"></div>
             <!--Form Ends-->
 
             <div class="w-form-done">
@@ -143,8 +142,7 @@
       </div>
     </div>
   </div>
-  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-<div class="elfsight-app-b7161374-a9e5-4bf9-b41a-cdb007e10e64"></div>
+
 
   <!--Last Nav Bar-->
   <div class="section section-footer-dark is-dark">
