--- a/contact.html
+++ b/contact.html
@@ -114,12 +114,13 @@
             us</div>
           <div class="container container-nested">
             <div class="col lg-6">
-              <div><span class="text-medium weight-is-medium">Near by?</span><br>‍<br>52 Antares 
-                Street<br>Dr #4, Nepean, Ottawa<br>ON K2E 7Z1, Canada<br>‍<br>info@vapourauto.com<br><a href="tel:613-608-9612">
+              <div><span class="text-medium weight-is-medium">Near by?</span><br>‍<br>52 Antares
+                Street<br>Dr #4, Nepean, Ottawa<br>ON K2E 7Z1, Canada<br>‍<br>info@vapourauto.com<br><a
+                  href="tel:613-608-9612">
                   613-608-9612</a><br></div>
             </div>
             <div class="col lg-6">
-              <div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday—Saturday<br>10am—7pm<br>
+              <div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday — Sunday<br>10am—8pm<br>
               </div>
             </div>
           </div>
@@ -142,6 +143,9 @@
       </div>
     </div>
   </div>
+
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <div class="elfsight-app-b7161374-a9e5-4bf9-b41a-cdb007e10e64"></div>
 
 
   <!--Last Nav Bar-->
