--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <!--  This site was created in Webflow. http://www.webflow.com  -->
 <!--  Last Published: Mon Oct 07 2019 05:18:37 GMT+0000 (UTC)  -->
 <html data-wf-page="5d89c358dbb3a8f0cd63cd0f" data-wf-site="5d83289ce8178d75c462eb9b">
+
 <head>
   <meta charset="utf-8">
   <title>About</title>
@@ -13,84 +14,84 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link href="css/asas-framework.webflow.css" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-  <script type="text/javascript">WebFont.load({  google: {    families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic","Gothic A1:100,200,300,regular,500,600,700,800,900"]  }});</script>
+  <script
+    type="text/javascript">WebFont.load({ google: { families: ["Montserrat:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic", "Gothic A1:100,200,300,regular,500,600,700,800,900"] } });</script>
   <!-- [if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif] -->
-  
+
 
 </head>
 <style>
- 
-  
-    @font-face {
-      font-family: Poppins;
-      src: url('fonts/Poppins-Regular.ttf');
-    }
-  
-    div {
-      font-family: Poppins
-    }
-  
-    a {
-      font-family: Poppins
-    }
-  
-    .tab1 {
-      tab-size: 4;
-    }
-  </style>
-  
-  <!-- Body Starts -->
-  
-  <body>
-    <div class="position-absolute custom-bg-decor"></div>
-    <div class="section-header position-absolute">
-      <div class="container space-between">
-        <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
-          <div class="navbar-container flexh-space-between w-container">
-            <a href="index.html" class="brand order-first w-nav-brand w--current">
-              <img src="images\FULL.png" width="135">
-            </a>
-  
-            <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
-              <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
-              <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
-              <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
-              <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
-                class="nav-dropdown w-dropdown">
-              </div>
-              </a>
-            </nav>
-            <div class="menu-button order-last hamburger-on-dark w-nav-button">
-              <div class="iconfont is-16px "><em class="iconfont__no-italize"><svg xmlns="http://www.w3.org/2000/svg"
-                    x="0px" y="0px" width="40" height="40" viewBox="0 0 172 172" style=" fill:#ffffff;">
-                    <g transform="">
-                      <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
-                        stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
-                        font-family="none" font-weight="none" font-size="none" text-anchor="none"
-                        style="mix-blend-mode: normal">
-                        <path d="M0,172v-172h172v172z" fill="none"></path>
-                        <g fill="#ffffff">
-                          <path
-                            d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z">
-                          </path>
-                        </g>
-                        <path d="" fill="none"></path>
-                      </g>
-                    </g>
-                  </svg></em></div>
+  @font-face {
+    font-family: Poppins;
+    src: url('fonts/Poppins-Regular.ttf');
+  }
+
+  div {
+    font-family: Poppins
+  }
+
+  a {
+    font-family: Poppins
+  }
+
+  .tab1 {
+    tab-size: 4;
+  }
+</style>
+
+<!-- Body Starts -->
+
+<body>
+  <div class="position-absolute custom-bg-decor"></div>
+  <div class="section-header position-absolute">
+    <div class="container space-between">
+      <div data-collapse="medium" data-animation="default" data-duration="400" class="navbar w-nav">
+        <div class="navbar-container flexh-space-between w-container">
+          <a href="index.html" class="brand order-first w-nav-brand w--current">
+            <img src="images\FULL.png" width="135">
+          </a>
+
+          <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
+            <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
+            <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
+            <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
+            <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
+              class="nav-dropdown w-dropdown">
             </div>
+            </a>
+          </nav>
+          <div class="menu-button order-last hamburger-on-dark w-nav-button">
+            <div class="iconfont is-16px "><em class="iconfont__no-italize"><svg xmlns="http://www.w3.org/2000/svg"
+                  x="0px" y="0px" width="40" height="40" viewBox="0 0 172 172" style=" fill:#ffffff;">
+                  <g transform="">
+                    <g fill="none" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt"
+                      stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0"
+                      font-family="none" font-weight="none" font-size="none" text-anchor="none"
+                      style="mix-blend-mode: normal">
+                      <path d="M0,172v-172h172v172z" fill="none"></path>
+                      <g fill="#ffffff">
+                        <path
+                          d="M14.33333,35.83333v14.33333h143.33333v-14.33333zM14.33333,78.83333v14.33333h143.33333v-14.33333zM14.33333,121.83333v14.33333h143.33333v-14.33333z">
+                        </path>
+                      </g>
+                      <path d="" fill="none"></path>
+                    </g>
+                  </g>
+                </svg></em></div>
           </div>
         </div>
       </div>
     </div>
-  
+  </div>
+
   <div class="section is-header is-half-dark section-with-bg bg1">
     <div class="container flex-horizontal">
       <div class="col lg-5 flexv-justify-center md-12">
-        <div class="breadcrumb margin-bottom-double"><a href="#">Home</a><span class="fa margin-left-small margin-right-small is-xsmall">></span>About Us</div>
+        <div class="breadcrumb margin-bottom-double"><a href="#">Home</a><span
+            class="fa margin-left-small margin-right-small is-xsmall">></span>About Us</div>
         <div>
           <h1>About Us</h1>
-          <div class="text-medium">Get Your Next Car Delivered. Great Prices. Better Cars. Delivered to You.</div>
+          <div class="text-medium">Get Your Next Car Vapor Washed. <br>Great Prices. Cleaner Cars. For You.</div>
         </div>
       </div>
       <div class="col lg-1"></div>
@@ -98,156 +99,55 @@
   </div>
   <div class="section is-dark">
     <div class="container">
-      <div class="col lg-6 md-12 order-first"><img src="images/aboutus.jpg" sizes="(max-width: 479px) 90vw, (max-width: 923px) 94vw, (max-width: 991px) 868px, 46vw" alt=""></div>
+      <div class="col lg-6 md-12 order-first"><img src="images/aboutus.jpg"
+          sizes="(max-width: 479px) 90vw, (max-width: 923px) 94vw, (max-width: 991px) 868px, 46vw" alt=""></div>        
       <div class="col lg-1 no-margin-bottom"></div>
       <div class="col lg-5 alignself-center md-12">
         <div class="pre-title on-dark">Our short story</div>
-        <h2 class="size-h2 size-h2-xs margin-bottom">We delivered car thousand times</h2>
-        <div class="margin-bottom">Most of Sorum&#x27;s vehicles are still covered under their original manufacturer&#x27;s warranty, but the coverage may be limited. Sorum&#x27;s Vehicle Service Protection (VSP) product helps protect you in the event of unexpected expenses.</div>
-        <div class="margin-bottom">If your vehicle is ever declared a total loss due to an accident, theft or natural disaster, your insurance company might only reimburse you for their assessed market value of the vehicle, leaving you to pay the balance or &quot;gap&quot;.</div>
+        <h2 class="size-h2 size-h2-xs margin-bottom">We deliver the cleanest.</h2>
+        <div class="margin-bottom">
+          Vapourauto is the region’s only vapour based detailing shop for premium car detailing. We may not be the
+          cheapest of the bunch but stand firmly behind the fact that no one in Ottawa does it like us! From vapour to
+          our high end detailing products we are crazy about what we do. <br><br>Quality over quantity is our motto.<br>
+
+          <br>Having 8+ years of detailing experience our business offers a level of quality that is usually overlooked at
+          other other shops. Our detailers are trained to very high standards to ensure the best possible outcome for
+          the client. We are not your typical "car wash" but rather a group of automotive enthusiasts that want to
+          ensure the best possible fit and finish for your ride.<br><br>
+
+          We do not worry about the number of cars we detail on a weekly or monthly basis, in fact, we are just
+          concerned about how satisfied customers are. We understand that our business is only going to thrive with
+          loyal customers like yourself. With this in mind, we constantly provide the best service and detailing to your
+          area that no other local business can provide. The most important thing is to ensure every customer is happy
+          with the results prior to taking deilvery of their vehicle. We are driven by results and by customer
+          satisfaction. <br><br>At Vapourauto, the customer always comes first.
+
+
+          Whether it is a simple salt removal or in depth showroom package our team will ensure the highest level of
+          quality for your vehicle.
+        </div>
+        
+
       </div>
     </div>
   </div>
 
-  <div class="section is-dark">
-    <div class="container flex-vertical flexv-align-center margin-bottom">
-      <div class="pre-title on-dark">Our Clients</div>
-      <h2 class="size-h2 size-h2-xs margin-bottom-2">We are big because of them</h2>
-    </div>
-    <div class="container">
-      <div class="col lg-12 margin-top">
-        <div class="w-layout-grid c-grid3x2">
-          <a href="#" id="w-node-0c01566c3909-cd63cd0f" data-w-id="e752ece2-3900-9a81-ff3e-0c01566c3909" class="c-grid1__item dummy-image1 logo1 w-inline-block w-lightbox">
-            <div class="c-grid1__overlay2 display-flex">
-              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="iconfont is-white is-64px"><em class="iconfont__no-italize"></em></div>
-            </div>
-            <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "5d8b216d08d7f8929d5f8488",
-      "fileName": "logo9.png",
-      "origFileName": "logo9.png",
-      "width": 214,
-      "height": 299,
-      "fileSize": 39198,
-      "url": "https://via.placeholder.com/1000x600.png?text=IMAGE"
-    }
-  ]
-}</script>
-          </a>
-          <a href="#" id="w-node-0c01566c390e-cd63cd0f" data-w-id="e752ece2-3900-9a81-ff3e-0c01566c390e" class="c-grid1__item dummy-image1 logo2 w-inline-block w-lightbox">
-            <div class="c-grid1__overlay2 display-flex">
-              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="iconfont is-white is-64px"><em class="iconfont__no-italize"></em></div>
-            </div>
-            <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "5d8b2a4ee7740e740564e90e",
-      "fileName": "logo7.png",
-      "origFileName": "logo7.png",
-      "width": 244,
-      "height": 331,
-      "fileSize": 25589,
-      "url": "https://via.placeholder.com/1000x600.png?text=IMAGE"
-    }
-  ]
-}</script>
-          </a>
-          <a href="#" id="w-node-0c01566c3913-cd63cd0f" data-w-id="e752ece2-3900-9a81-ff3e-0c01566c3913" class="c-grid1__item dummy-image1 logo3 w-inline-block w-lightbox">
-            <div class="c-grid1__overlay2 display-flex">
-              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="iconfont is-white is-64px"><em class="iconfont__no-italize"></em></div>
-            </div>
-            <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "5d8b2a4e08d7f83c50603215",
-      "fileName": "logo2.png",
-      "origFileName": "logo2.png",
-      "width": 292,
-      "height": 301,
-      "fileSize": 38017,
-      "url": "https://via.placeholder.com/1000x600.png?text=IMAGE"
-    }
-  ]
-}</script>
-          </a>
-          <a href="#" id="w-node-0c01566c3918-cd63cd0f" data-w-id="e752ece2-3900-9a81-ff3e-0c01566c3918" class="c-grid1__item dummy-image1 logo4 w-inline-block w-lightbox">
-            <div class="c-grid1__overlay2 display-flex">
-              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="iconfont is-white is-64px"><em class="iconfont__no-italize"></em></div>
-            </div>
-            <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "5d8b2a4f8c12c7eda13c0453",
-      "fileName": "logo8.png",
-      "origFileName": "logo8.png",
-      "width": 222,
-      "height": 292,
-      "fileSize": 11419,
-      "url": "https://via.placeholder.com/1000x600.png?text=IMAGE"
-    }
-  ]
-}</script>
-          </a>
-          <a href="#" id="w-node-0c01566c391d-cd63cd0f" data-w-id="e752ece2-3900-9a81-ff3e-0c01566c391d" class="c-grid1__item dummy-image1 logo5 w-inline-block w-lightbox">
-            <div class="c-grid1__overlay2 display-flex">
-              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="iconfont is-white is-64px"><em class="iconfont__no-italize"></em></div>
-            </div>
-            <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "5d8b2a4f8c12c71a143c0455",
-      "fileName": "logo5.png",
-      "origFileName": "logo5.png",
-      "width": 276,
-      "height": 281,
-      "fileSize": 43518,
-      "url": "https://via.placeholder.com/1000x600.png?text=IMAGE"
-    }
-  ]
-}</script>
-          </a>
-          <a href="#" id="w-node-0c01566c3922-cd63cd0f" data-w-id="e752ece2-3900-9a81-ff3e-0c01566c3922" class="c-grid1__item dummy-image1 logo6 w-inline-block w-lightbox">
-            <div class="c-grid1__overlay2 display-flex">
-              <div style="-webkit-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(0.1, 0.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="iconfont is-white is-64px"><em class="iconfont__no-italize"></em></div>
-            </div>
-            <script type="application/json" class="w-json">{
-  "items": [
-    {
-      "type": "image",
-      "_id": "5d8b2a513cb7478899275149",
-      "fileName": "logo3.png",
-      "origFileName": "logo3.png",
-      "width": 220,
-      "height": 292,
-      "fileSize": 34164,
-      "url": "https://via.placeholder.com/1000x600.png?text=IMAGE"
-    }
-  ]
-}</script>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="section is-dark">
+
+  <!-- <div class="section is-dark">
     <div class="container">
       <div class="col lg-3 md-12 md-order-last">
-        <div class="c-team2"><img src="https://via.placeholder.com/1000x600.png?text=IMAGE" alt="" class="margin-bottom">
+        <div class="c-team2"><img src="https://via.placeholder.com/1000x600.png?text=IMAGE" alt=""
+            class="margin-bottom">
           <div class="is-bold">Vapour Auto, Owner</div>
         </div>
       </div>
       <div class="col lg-1 no-margin-bottom"></div>
       <div class="col lg-8 md-12">
-        <div class="quote ma-no-padding-lr">Some info about owner. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</div>
+        <div class="quote ma-no-padding-lr">Some info about owner. Cum sociis natoque penatibus et magnis dis parturient
+          montes, nascetur ridiculus mus.</div>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
   <!--Last Nav Bar-->
