About Page Update
Updated the text, centered & added a new image.
Overall made it look good.

Saswat

--- a/about.html
+++ b/about.html
@@ -97,39 +97,37 @@
       <div class="col lg-1"></div>
     </div>
   </div>
-  <div class="section is-dark">
-    <div class="container">
-      <div class="col lg-6 md-12 order-first"><img src="images/aboutus.jpg"
-          sizes="(max-width: 479px) 90vw, (max-width: 923px) 94vw, (max-width: 991px) 868px, 46vw" alt=""></div>        
-      <div class="col lg-1 no-margin-bottom"></div>
-      <div class="col lg-5 alignself-center md-12">
-        <div class="pre-title on-dark">Our short story</div>
-        <h2 class="size-h2 size-h2-xs margin-bottom">We deliver the cleanest.</h2>
-        <div class="margin-bottom">
-          Vapourauto is the region’s only vapour based detailing shop for premium car detailing. We may not be the
-          cheapest of the bunch but stand firmly behind the fact that no one in Ottawa does it like us! From vapour to
-          our high end detailing products we are crazy about what we do. <br><br>Quality over quantity is our motto.<br>
 
-          <br>Having 8+ years of detailing experience our business offers a level of quality that is usually overlooked at
-          other other shops. Our detailers are trained to very high standards to ensure the best possible outcome for
-          the client. We are not your typical "car wash" but rather a group of automotive enthusiasts that want to
-          ensure the best possible fit and finish for your ride.<br><br>
+  <div class="section is-dark ">
+    <div class="col lg-1 no-margin-bottom "></div>
+    <div class="col lg-5 alignself-center md-12">
+      <div class="pre-title on-dark marginsides">Our short story</div>
+      <h2 class="size-h2 size-h2-xs margin-bottom marginsides">We deliver the cleanest.</h2>
+      <div class="margin-bottom marginsides">
+        Vapourauto is the region’s only vapour based detailing shop for premium car detailing. We may not be the
+        cheapest of the bunch but stand firmly behind the fact that no one in Ottawa does it like us! <br> Vapour to
+        our high end detailing products we are crazy about what we do. <br><br>Quality over quantity is our motto.<br>
 
-          We do not worry about the number of cars we detail on a weekly or monthly basis, in fact, we are just
-          concerned about how satisfied customers are. We understand that our business is only going to thrive with
-          loyal customers like yourself. With this in mind, we constantly provide the best service and detailing to your
-          area that no other local business can provide. The most important thing is to ensure every customer is happy
-          with the results prior to taking deilvery of their vehicle. We are driven by results and by customer
-          satisfaction. <br><br>At Vapourauto, the customer always comes first.
+        <br>Having 8+ years of detailing experience our business offers a level of quality that is usually overlooked at
+        other other shops. Our detailers are trained to very high standards to ensure the best possible outcome <br>for
+        the client. We are not your typical "car wash" but rather a group of automotive enthusiasts that want to
+        ensure the best possible fit and finish for your ride.<br><br>
+
+        We do not worry about the number of cars we detail on a weekly or monthly basis, in fact, we are just
+        concerned about how satisfied customers are. We understand that our business is only going to thrive with<br>
+        loyal customers like yourself. With this in mind, we constantly provide the best service and detailing to your
+        area that no other local business can provide. The most important thing is to ensure every customer is<br> happy
+        with the results prior to taking deilvery of their vehicle. We are driven by results and by customer
+        satisfaction. <br><br>At Vapourauto, the customer always comes first.
 
 
-          Whether it is a simple salt removal or in depth showroom package our team will ensure the highest level of
-          quality for your vehicle.
-        </div>
-        
-
+        Whether it is a simple salt removal or in depth showroom package our team will ensure the highest level of
+        quality for your vehicle.
       </div>
+
+
     </div>
+  </div>
   </div>
 
 
