--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,7 @@
       <div class="col lg-5 flexv-justify-center md-12">
         <div class="breadcrumb margin-bottom-double"><a href="#">Home</a><span
             class="fa margin-left-small margin-right-small is-xsmall">></span>Contact Us</div>
+            
         <div>
           <h1>Contact Us</h1>
           <div class="text-medium">We are always on for you</div>
@@ -105,6 +106,7 @@
       <div class="col lg-1"></div>
     </div>
   </div>
+<!--  
   <div class="section bg-dummy-image no-padding-bottom overflow-hidden">
     <div class="c-contact1">
       <div class="c-contact1__wrapper is-dark">
@@ -119,6 +121,7 @@
                   href="tel:613-608-9612">
                   613-608-9612</a><br></div>
             </div>
+
             <div class="col lg-6">
               <div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday — Sunday<br>10am—8pm<br>
               </div>
@@ -127,10 +130,10 @@
           <div class="c-contact1__form w-form">
             <div class="margin-bottom">Or send us message:</div>
 
-            <!--Form Starts-->
+            !--Form Starts--
             <script src="https://apps.elfsight.com/p/platform.js" defer></script>
             <div class="elfsight-app-bfe90ba5-e349-4172-a3f9-0030addfe7a2"></div>
-            <!--Form Ends-->
+            !--Form Ends--
 
             <div class="w-form-done">
               <div>Thank you! Your submission has been received!</div>
@@ -142,7 +145,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <script src="https://apps.elfsight.com/p/platform.js" defer></script>
   <div class="elfsight-app-b7161374-a9e5-4bf9-b41a-cdb007e10e64"></div>
