--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
   <section class="showcase">
     <div class="video-container">
-      <video src="images/Vapour Auto.mp4" autoplay muted loop></video>
+      <video src="images/Fvaporauto.mp4" autoplay muted loop></video>
     </div>
 
   </section>
@@ -126,7 +126,7 @@
 
 
 
-        </div><a href="about.html" class="cta-link change-color"><span class="margin-right">Learn More</span>
+        </div><a href="services.html" class="cta-link change-color"><span class="margin-right">Learn More</span>
           <span class="fa c-cta1_arrow-hovered">></span>
           <span class="fa c-cta1__arrow-normal"></span></a>
       </div>
@@ -175,7 +175,7 @@
 
 
 
-          </div><a href="about.html" class="cta-link change-color"><span class="margin-right">Learn More</span>
+          </div><a href="services.html" class="cta-link change-color"><span class="margin-right">Learn More</span>
             <span class="fa c-cta1_arrow-hovered">></span>
             <span class="fa c-cta1__arrow-normal"></span></a>
         </div>
@@ -375,7 +375,7 @@
       <div class="col lg-6 md-12 centermargin">
         <div class="centermargin flexh-space-between md-flex-vertical">
           <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
-          <a href="#" class="footer-nav-link is-bold on-dark">FAQ's</a>
+          <a href="faq.html" class="footer-nav-link is-bold on-dark">FAQ's</a>
           <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
           <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
         </div>
