--- a/about.html
+++ b/about.html
@@ -160,7 +160,7 @@
       <div class="col lg-6 md-12 centermargin">
         <div class="centermargin flexh-space-between md-flex-vertical">
           <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
-          <a href="#" class="footer-nav-link is-bold on-dark">FAQ's</a>
+          <a href="faq.html" class="footer-nav-link is-bold on-dark">FAQ's</a>
           <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
           <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
         </div>
