--- a/404.html
+++ b/404.html
@@ -61,6 +61,7 @@
           <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
             <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
             <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
+            <a href="faq.html" class="nav-link on-dark w-nav-link">FAQ's</a>
             <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
             <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
               class="nav-dropdown w-dropdown">
