--- a/contact.html
+++ b/contact.html
@@ -83,6 +83,7 @@
           <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
             <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
             <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
+            <a href="faq.html" class="nav-link on-dark w-nav-link">FAQ's</a>
             <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
             <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
               class="nav-dropdown w-dropdown">
@@ -113,7 +114,7 @@
     </div>
   </div>
 
-  <div class="section is-header is-half-dark section-with-bg bg2">
+  <div class="section is-header is-half-dark section-with-bg bg3">
     <div class="container flex-horizontal">
       <div class="col lg-5 flexv-justify-center md-12">
         <div class="breadcrumb margin-bottom-double"><a href="index.html">Home</a><span
@@ -182,23 +183,25 @@
           <div><span class="text-medium weight-is-medium">Near by?</span><br>‍<br>52 Antares
             Street<br>Dr #4, Nepean, Ottawa<br>ON K2E 7Z1, Canada<br>‍<br>info@vapourauto.com<br><a
               href="tel:613-608-9612">
-              613-608-9612</a><br><br><br><br><div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday — Sunday<br>10am—8pm<br></div>
-        </div>
-
-        
+              613-608-9612</a><br><br><br><br>
+            <div><span class="text-medium weight-is-medium">Office Hours</span><br><br>Monday — Sunday<br>10am—8pm<br>
+            </div>
           </div>
+
+
         </div>
       </div>
     </div>
+  </div>
 
 
 
-    <div id="rightbox">
-      <div class="margin-bottom">Or send us message:</div>
+  <div id="rightbox">
+    <div class="margin-bottom">Or send us message:</div>
 
-            <script src="https://apps.elfsight.com/p/platform.js" defer></script>
-            <div class="elfsight-app-bfe90ba5-e349-4172-a3f9-0030addfe7a2"></div>
- 
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+    <div class="elfsight-app-bfe90ba5-e349-4172-a3f9-0030addfe7a2"></div>
+
   </div>
 
 
@@ -212,38 +215,32 @@
     <a href="index.html" class="c">
       <img class="centerimg margin-bottom-2" src="images\VAlogo.png">
     </a>
-    <div class="container margin-bottom centermargin">
+    <div class="container centermargin">
       <div class="col lg-3 md-12">
       </div>
       <div class="col lg-6 md-12 centermargin">
-        <div class="centermargin flexh-space-between md-flex-vertical">
+        <div class=" flexh-space-between md-flex-vertical">
+          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
           <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
           <a href="faq.html" class="footer-nav-link is-bold on-dark">FAQ's</a>
-          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
           <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
         </div>
       </div>
       <div class="col lg-3 md-12">
-        <div class="flexh-justify-end md-flexh-justify-start">
+        <div class=" md-flexh-justify-start">
         </div>
       </div>
     </div>
-
-
-
-    <div class="container flexh-justify-center md-flexh-justify-left">
-      <div class="col lg-6 margin-bottom">
+    <div class=" flexh-justify-center md-flexh-justify-left">
         <div class="low-text-contrast text-small flexh-space-between md-flex-vertical">
-          <div class="md-order-last">© Vapour Auto. All rights reserved.</div>
-          <a href="#" class="footer-bottom-link on-dark">Privacy Policy</a>
-          <a href="#" class="footer-bottom-link on-dark">Term Of Service</a>
+          <div class="md-order-last centermargin">© Vapour Auto. All rights reserved.</div>
+
+
         </div>
       </div>
-    </div>
-  </div>
-  <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+      <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+      <script src="js/webflow.js" type="text/javascript"></script>
+      <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 
 </html>
