--- a/services.html
+++ b/services.html
@@ -35,7 +35,9 @@
   }
 
   div {
-    font-family: Poppins
+    font-family: Poppins;
+    color: white;
+
   }
 
   a {
@@ -48,10 +50,11 @@
 
   }
 
-  h6 {
+  h4 {
     font-family: Poppins;
     color: white;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: bold;
   }
 
   .tab1 {
@@ -75,6 +78,7 @@
           <nav role="navigation" class="nav-menu order-last nav-on-dark w-nav-menu">
             <a href="services.html" class="nav-link on-dark w-nav-link">Services</a>
             <a href="about.html" class="nav-link on-dark w-nav-link">About Us</a>
+            <a href="faq.html" class="nav-link on-dark w-nav-link">FAQ's</a>
             <a href="contact.html" class="nav-link on-dark w-nav-link">Contact</a>
             <div data-hover="1" data-delay="0" data-w-id="f991f64e-74af-0997-82ad-7ee44addf741"
               class="nav-dropdown w-dropdown">
@@ -130,31 +134,44 @@
       <div class="service">
         <i class="fas fa-anchor"></i>
         <h2>Quick Interior</h2>
-        <h6>$100 - 1hr 15min</h6>
+        <div>
+          $100 – Passenger Car or Truck<br>
+          $120 – SUV, Van, Hatchback Wagon
+        </div>
+        <h4>1 hour 15 minutes max</h4>
+        <img src="images/quick.png" width="50px">
+        <div><br></div>
         <p>• Antimicrobial steam hand wash<br>
           • Quick vacuum interior<br>
           • Disinfection of windows, mirrors, glass<br>
-          • Door jambs sanitized<br>
+
           • Trim sanitization<br>
           • Quick seat steaming<br>
           • Mats scrubbed and sanitized<br>
           • Interior plastics dressed<br>
+          <br>
         </p>
       </div>
 
       <div class="service">
         <i class="fab fa-android"></i>
-        <h2>Advanced Interior</h2>
-        <h6>$160 - 1hr 45min</h6>
+        <h2>Standard Interior</h2>
+        <div>
+          $160 – Passenger Car or Truck<br>
+          $180 – SUV, Van, Hatchback Wagon
+        </div>
+        <h4>1 hour 45 minutes max</h4>
+        <img src="images/badge.png" width="50px">
+        <div><br></div>
         <p>
           • Antimicrobial steam hand wash<br>
           • Vacuum interior<br>
           • Disinfection of windows, mirrors, glass<br>
-          • Door jambs sanitized<br>
+
           • Trim sanitization and conditioning <br>
-          • Steam seat stain removal)<br>
+          • Steam seat stain removal<br>
           • Mats scrubbed and sanitized<br>
-          • Salt removal
+          • Salt removal<br>
           • Vent sanitization<br>
 
         </p>
@@ -163,16 +180,22 @@
       <div class="service">
         <i class="fab fa-angellist"></i>
         <h2>Showroom Interior</h2>
-        <h6>$300 - 4 hours</h6>
+        <div>
+          $280 – Passenger Car or Truck<br>
+          $320 – SUV, Van, Hatchback Wagon
+        </div>
+        <h4>4 hours max</h4>
+        <img src="images/showroom.png" width="50px">
+        <div><br></div>
         <p>
           • Thourough antimicrobial steam hand wash<br>
-          • Vacuum interior in detail
+          • Vacuum interior in detail<br>
           • Headliner steamed & disinfected<br>
           • Decontamination of windows, mirrors, glass<br>
           • Door jambs sanitized<br>
           • Trim sanitization and conditioning<br>
           • Steam seat stain removal<br>
-          • Mats thouroughly scrubbed & sanitized
+          • Mats thouroughly cleaned
 
         </p>
       </div>
@@ -182,26 +205,56 @@
       <div class="service">
         <i class="fas fa-anchor"></i>
         <h2>Basic Exterior</h2>
-        <h6>$30 - 15min</h6>
+        <div class="margin-bottom">
+          $30 - Any Vehicle
+        </div>
+        <h4>15 minutes max</h4>
+        <img src="images/basic.png" width="50px">
+        <div><br></div>
         <p>• Foam bath + High pressure rinse<br>
           • Tires + Rims brushed and sanitized<br>
           • Exterior glass cleaned<br>
           • Air blow/shamois dry<br>
           • Tires dressed
-
+          <br>
+          <br>
         </p>
       </div>
 
       <div class="service">
         <i class="fab fa-angellist"></i>
         <h2>Steam Exterior</h2>
-        <h6>$50 - 25min</h6>
+        <div class="margin-bottom">
+          $60 - Any Vehicle
+        </div>
+        <h4>25 minutes max</h4>
+        <img src="images/steam.png" width="50px">
+        <div><br></div>
         <p>• High pressure Steam exterior wash<br>
           • High detail wash<br>
           • Tires + Rims brushed<br>
           • Exterior + Interior glass cleaned<br>
-          • Quick wax
+          • Quick wax<br>
           • Tires dressed & conditioned
+          
+        </p>
+      </div>
+
+      <div class="service">
+        <i class="fab fa-angellist"></i>
+        <h2>Showroom Exterior</h2>
+        <div class="margin-bottom-small">
+          $120 - Any Vehicle
+        </div>
+        <h4>1 hour max</h4>
+        <img src="images/add.png" width="50px">
+        <div><br></div>
+        <p>• High pressure Steam exterior wash<br>
+          • Super high detail wash and claybar<br>
+          • Tires + Rims + all body crevasses brushed<br>
+          • Glasses cleaned<br>
+          • Brake dust removed<br>
+          • Spray ceramic applied <br>• Tires scrubbed & conditioned
         </p>
       </div>
 
@@ -212,6 +265,7 @@
 
   <div class="services">
     <div class="textlarge2 black"><br>Additional Services</div>
+    <h1>Interior Services</h1>
     <div class="cen">
       <div class="service">
         <i class="fas fa-anchor"></i>
@@ -249,29 +303,7 @@
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
       </div>
 
-      <div class="service">
-        <i class="fas fa-archway"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      </div>
 
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      </div>
-
-      <div class="service">
-        <i class="fas fa-archway"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      </div>
-
-      <div class="service">
-        <i class="far fa-angry"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      </div>
 
     </div>
   </div>
@@ -306,40 +338,35 @@
   <!-- Nav Bar Last -->
 
   <div class="section section-footer-dark is-dark">
-    <a href="index.html" class="brand order-first w-nav-brand w--current">
-      <img class="centerimg margin-bottom-2" src="images\FULL.png">
+    <a href="index.html" class="c">
+      <img class="centerimg margin-bottom-2" src="images\VAlogo.png">
     </a>
-    <div class="container margin-bottom">
+    <div class="container centermargin">
       <div class="col lg-3 md-12">
       </div>
-      <div class="col lg-6 md-12">
-        <div class="flexh-space-between md-flex-vertical">
+      <div class="col lg-6 md-12 centermargin">
+        <div class=" flexh-space-between md-flex-vertical">
+          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
           <a href="about.html" class="footer-nav-link is-bold on-dark">About Us</a>
           <a href="faq.html" class="footer-nav-link is-bold on-dark">FAQ's</a>
-          <a href="services.html" class="footer-nav-link is-bold on-dark">Services</a>
           <a href="contact.html" class="footer-nav-link is-bold on-dark">Contact Us</a>
         </div>
       </div>
       <div class="col lg-3 md-12">
-        <div class="flexh-justify-end md-flexh-justify-start">
-
-
+        <div class=" md-flexh-justify-start">
         </div>
       </div>
     </div>
-    <div class="container flexh-justify-center md-flexh-justify-left">
-      <div class="col lg-6 margin-bottom">
+    <div class=" flexh-justify-center md-flexh-justify-left">
         <div class="low-text-contrast text-small flexh-space-between md-flex-vertical">
-          <div class="md-order-last">© Vapour Auto. All rights reserved.</div>
-          <a href="#" class="footer-bottom-link on-dark">Privacy Policy</a>
-          <a href="#" class="footer-bottom-link on-dark">Term Of Service</a>
+          <div class="md-order-last centermargin">© Vapour Auto. All rights reserved.</div>
+
+
         </div>
       </div>
-    </div>
-  </div>
-  <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
-  <script src="js/webflow.js" type="text/javascript"></script>
-  <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+      <script src="js/jquery-3.4.1.min.js" type="text/javascript"></script>
+      <script src="js/webflow.js" type="text/javascript"></script>
+      <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
 </body>
 
 </html>
