--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
   <div class="section is-header is-half-dark section-with-bg bg1">
     <div class="container flex-horizontal">
       <div class="col lg-5 flexv-justify-center md-12">
-        <div class="breadcrumb margin-bottom-double"><a href="#">Home</a><span
+        <div class="breadcrumb margin-bottom-double"><a href="index.html">Home</a><span
             class="fa margin-left-small margin-right-small is-xsmall">></span>About Us</div>
         <div>
           <h1>About Us</h1>
