--- a/services.html
+++ b/services.html
@@ -262,48 +262,195 @@
     </div>
   </div>
 
-
+<!--Interior Services-->
   <div class="services">
     <div class="textlarge2 black"><br>Additional Services</div>
     <h1>Interior Services</h1>
     <div class="cen">
       <div class="service">
         <i class="fas fa-anchor"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Leather Conditioning</h2>
+        <div class="margin-bottom-small">
+          $8 - Any Vehicle
+        </div>
+        <h4>5 minutes</h4>
+        <p>Brings dry and cracked leather back to life! Protects leather from UV rays.</p>
       </div>
 
       <div class="service">
         <i class="fab fa-android"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Puke/Blood</h2>
+        <div class="margin-bottom-small">
+          $250.00
+        </div>
+        <h4>30 minutes</h4>
+        <p>Decontamination and steam treatment of affected area.</p>
       </div>
 
       <div class="service">
         <i class="fab fa-angellist"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Ozone Sterilization </h2>
+        <div class="margin-bottom-small">
+          $100.00
+        </div>
+        <h4>1 day max</h4>
+        <p>Kills bacteria and smells in cabin. Sterilizes all surfaces.</p>
       </div>
 
       <div class="service">
         <i class="fas fa-apple-alt"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Dog Hair Removal</h2>
+        <div class="margin-bottom-small">
+          $45.00
+        </div>
+        <h4>20 minutes</h4>
+        <p>Priced/timed per area. Remove pesky hairs stuck in the carpet!</p>
       </div>
 
       <div class="service">
         <i class="fas fa-archway"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+       <h2>Child Seat Sanitization</h2>
+        <div class="margin-bottom-small">
+          $15.00
+        </div>
+        <h4>5 minutes</h4>
+        <p>Priced Per seat. Sanitized with steam. No chemicals needed!</p>
       </div>
 
       <div class="service">
         <i class="far fa-angry"></i>
-        <h2>Service Name</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        <h2>Salt Removal</h2>
+        <div class="margin-bottom-small">
+          $25.00
+        </div>
+        <h4>5 - 15 minutes</h4>
+        <p>Priced/timed per area.<br><br></p>
       </div>
 
 
+
+      <!--Exterior Services-->
+      <h1>Exterior Services</h1>
+    <div class="cen">
+      <div class="service">
+        <i class="fas fa-anchor"></i>
+        <h2>Lens Buffing</h2>
+        <div class="margin-bottom-small">
+          $65.00
+        </div>
+        <h4>25 minutes</h4>
+        <p>Buffing headlights that have sun fading and light scratches.</p>
+      </div>
+
+      <div class="service">
+        <i class="fab fa-android"></i>
+        <h2>Headlight Restoration</h2>
+        <div class="margin-bottom-small">
+          $110.00
+        </div>
+        <h4>45 minutes</h4>
+        <p>Restoration and sealant of heavily discolored and scratched lenses.</p>
+      </div>
+
+      <div class="service">
+        <i class="fab fa-angellist"></i>
+        <h2>Engine Shampoo</h2>
+        <div class="margin-bottom-small">
+          $50.00
+        </div>
+        <h4>15 minutes</h4>
+        <p>Shampoo the engine bay to remove dust/debris.</p>
+      </div>
+
+      <div class="service">
+        <i class="fas fa-apple-alt"></i>
+        <h2>Engine Detail</h2>
+        <div class="margin-bottom-small">
+          $75.00
+        </div>
+        <h4>35 minutes</h4>
+        <p>Extensively detail the bay to remove grease. Condition all accessible plastics.</p>
+      </div>
+
+      <div class="service">
+        <i class="fas fa-archway"></i>
+       <h2>Brake Dust Removal</h2>
+        <div class="margin-bottom-small">
+          $15.00
+        </div>
+        <h4>10 minutes</h4>
+        <p>Price per rim. Removes caked on brake dust from face of rim.</p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Rim Deep Cleaning</h2>
+        <div class="margin-bottom-small">
+          $60.00
+        </div>
+        <h4>20 minutes</h4>
+        <p>Price per rim. Rim removed from vehicle and detailed.</p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Wheel Well Cleaning</h2>
+        <div class="margin-bottom-small">
+          $15.00
+        </div>
+        <h4>10 minutes</h4>
+        <p>Per wheel well. Must be paired with rim deep cleaning.</p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Windshield Treatment</h2>
+        <div class="margin-bottom-small">
+          $40.00
+        </div>
+        <h4>10 minutes</h4>
+        <p>Protective hydrophobic coating that repels water and improves visibility in rain. </p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Clay Bar</h2>
+        <div class="margin-bottom-small">
+          $60.00
+        </div>
+        <h4>45 minutes</h4>
+        <p>Remove pollutants hidden in the paint commonly missed by the naked eye</p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Carnauba Wax</h2>
+        <div class="margin-bottom-small">
+          $75.00
+        </div>
+        <h4>35 minutes</h4>
+        <p>Application of professional paste hand wax to deepen shine provide basic hydrophobic properties & protect paint.</p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Spray on Ceramic Coating</h2>
+        <div class="margin-bottom-small">
+          $110.00
+        </div>
+        <h4>45 minutes</h4>
+        <p>Ceramic spray treatment that provides high levels of hydrophobic properties and prevents contaminants sticking to paint.</p>
+      </div>
+
+      <div class="service">
+        <i class="far fa-angry"></i>
+        <h2>Car Sale Service</h2>
+        <div class="margin-bottom-small">
+          $65.00
+        </div>
+        <h4>45 minutes</h4>
+        <p>10-15 Professional pictures are taken and edited after your detailing of choice!<br><br></p>
+      </div>
 
     </div>
   </div>
@@ -314,7 +461,7 @@
       <div class="col lg-12">
         <div class="c-cta1 is-wrapping justifyv-md">
           <div class="md-margin-bottom">
-            <div class="size-h3 md-text-align-center margin-bottom-2">Feel the Vapour Wash</div>
+            <div class="size-h3 md-text-align-center margin-bottom-2 centermargin">Feel the Vapour Wash</div>
             <div class="low-text-contrast md-text-align-center"><strong>Count on us to make your next car wash
                 experience the best you’ve ever had.</strong></div>
           </div>
